[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/fonts/Main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/LogInScreen/LogIn.gd" type="Script" id=2]
[ext_resource path="res://theme/Button_Style.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0509804, 0.0509804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="title_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -260.0
margin_right = 240.0
margin_bottom = -210.0
custom_fonts/font = ExtResource( 1 )
text = "Log in to play"
align = 1

[node name="username_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -190.0
margin_right = 240.0
margin_bottom = -130.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
align = 1
placeholder_text = "Usernmae"
placeholder_alpha = 0.3

[node name="password_edit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = -60.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
align = 1
secret = true
placeholder_text = "Password"
placeholder_alpha = 0.3

[node name="log_in_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -32.0
margin_right = 240.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Log in"

[node name="notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 56.0
margin_right = 240.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="back_button" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "<<back"
